# kalc

./: .gitignore  .pylintrc  .travis.yml  EXAMPLES.md  README-DEV.md  README.md  TEST  kubectl-val.exe.spec  log  makarty-1.ipynb  makarty-41.ipynb  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/cluster_fullnode/: cluster.yaml  nodes.yaml  pods.yaml
examples/currentCloud/: appsV2Api_list_daemon_set_for_all_namespaces.yaml  coreV1_api_list_node.yaml  coreV1_api_list_pod_for_all_namespaces.yaml  coreV1_list_service_for_all_namespaces.yaml  shV1beta1_api_list_priority_class.yaml
guardctl/: cli.py  run-test.sh
guardctl/misc/: util.py  (+5 more)
kalc/: cli.py  interactive.py  policy.py
tests/: _test_cli_optimize_targeted.py  _test_pod_actions.py  debugging.py  libs_for_tests.py  run-test.sh  test_KubernetesCluster.py  test_a_object_converter.py  test_antiaffinity.py  test_balancing.py  test_balancing_reverse.py  test_basic_cli.py  test_cli.py  test_cli_opt_daemonset.py  test_cli_optimize.py  test_cli_optimize_copy.py  test_cli_optimize_targeted.py  test_combinations_rebalance.py  test_cyclic_load.py  test_daemonset_apply.py  test_daemonset_create.py  test_deployment.py  test_deployment_apply.py  test_drain.py  test_drain_targeted.py  test_drain_with_ds.py  test_example_1.py  test_factory.py  test_find_property.py  test_folder_load.py  test_fullmodel.py  test_generator.py  test_gentest.py  test_kube1.py  test_kube_daemonset_1.py  test_metric.py  test_model_startpod.py  test_native_selector.py  test_node_outage.py  test_object_converter.py  test_policy_rebalancing.py  (+31 more)
(+200 files in other folders)
